Added material UI component and fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -4,32 +4,37 @@ body {
   }
   
   ol, ul {
-    padding-left: 30px;
+      padding: 10px;
   }
   
-  .board-row:after {
-    clear: both;
-    content: "";
-    display: table;
+  .grid {
+    display: grid;
+    gap: 0px;
+    grid-template-columns: repeat(3, 1fr);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: center;
+    transform: translate(-50%, -50%);
   }
 
+  div > div {
+    background-color: rgb(255, 255, 255);
+  }
+  
   .status {
     margin-bottom: 10px;
   }
   
   .square {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
+    background:rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
+    position: relative;
+    font-size: 48px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
+    height: 120px;
+    width: 120px;
     text-align: center;
-    width: 34px;
   }
   
   .square:focus {
